Fixed bug #3329: Page properties button has wrong position.
git-svn-id: https://svn.typo3.org/TYPO3v4/CoreProjects/feedit/trunk@1596 743128fe-103e-dd11-99c4-001b210b3e58

--- a/feeditadvanced/res/css/fe_edit_advanced.css
+++ b/feeditadvanced/res/css/fe_edit_advanced.css
@@ -562,8 +562,8 @@ div.feEditAdvanced-contentWrapper form.typo3-editPanel {
 #feEditAdvanced-menuBar div.feEditAdvanced-editPanelDiv {
 	background: none;
 	border: none;
-	top: 0;
 	min-width: 0;
+	position: static;
 }
 
 #feEditAdvanced-menuBar div.feEditAdvanced-allWrapper {
